[package]
name = "rust_rocket"
version = "0.1.0"
authors = ["Ekrem Karatas <ekremk95@gmail.com>"]

[dependencies]
postgres = "0.15"
rocket = "0.3.11"
rocket_codegen = "0.3.11"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.6", features = ["v4"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]